# IA-AGENT

./: doc.txt  main.py  pyproject.toml  sma.ipynb
TP2/: main.py  pyproject.toml  sa.ipynb
TP3/: main.py  pyproject.toml  ragv2.ipynb
agentic_rag/: agentic_rag.py  langgraph.json  pyproject.toml
agentic_rag/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
tp4/: pyproject.toml
